7210
This is marked as fixed, but it is still present in 2.10.0-RC1:

Welcome to Scala version 2.10.0-RC1 (Java HotSpot(TM) 64-Bit Server VM, Java 1.7.0_09).
Type in expressions to have them evaluated.
Type :help for more information.

scala> val a:Seq[Int]     = collection.mutable.Seq[Int]()
a: Seq[Int] = ArrayBuffer()

scala> val b:Set[Int]     = collection.mutable.Set[Int]()
<console>:8: error: type mismatch;
 found   : scala.collection.mutable.Set[Int]
 required: scala.collection.immutable.Set[Int]
       val b:Set[Int]     = collection.mutable.Set[Int]()
                                                       ^

scala> val c:Map[Int,Int] = collection.mutable.Map[Int,Int]()
<console>:8: error: type mismatch;
 found   : scala.collection.mutable.Map[Int,Int]
 required: scala.collection.immutable.Map[Int,Int]
       val c:Map[Int,Int] = collection.mutable.Map[Int,Int]()
                                                           ^

